# thermodynamic-neural-networks

./: README.md  environment.yml  pyproject.toml
src/tasp_core/: __init__.py  exception.py  logger.py  logging_config.py  simulator.py
src/tnn/: dynamics.py
tests/: test_simulator.py
